ADD splashscreen and moved gradle versions to seperate file

--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,8 @@ buildscript{
     dependencies {
         classpath "com.google.dagger:hilt-android-gradle-plugin:2.38.1"
     }
+
+    apply from: 'versions.gradle'
 }
 
 plugins {
